--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,5 @@
 $color-azul: rgb(7, 38, 105);
-$tamaño-tituloh1: 120px;
+$tamaño-titulo: 28px;
 $color-primario: rgb(225, 234, 238);
 $color-secundario: rgb(121, 136, 143);
 $fondo-nav: linear-gradient(90deg, rgba(2,0,36,1) 10%, rgba(9,9,121,1) 66%);
