--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,19 +1,50 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;700;800&family=Nunito+Sans:wght@200;300;400;600;700;900&display=swap");
 @import url(animate.css);
+/*Contactos*/
+#contactanos { display: flex; flex-wrap: border-box; }
+
+#contactanos div { flex-grow: 1; flex-basis: 100%; }
+
+@media screen and (min-width: 576px) { #contactanos div { flex-basis: 90% !important; } }
+
+@media screen and (min-width: 768px) { #contactanos div { flex-basis: 60% !important; margin: 15px; } }
+
+@media screen and (min-width: 1024px) { #contactanos div { flex-basis: 25% !important; } }
+
+/*Final de contactos*/
 * { margin: 0; padding: 0; list-style: none; text-decoration: none; border: none; outline: none; }
 
 nav { background-image: linear-gradient(90deg, #020024 10%, #090979 66%); }
 
-h1 { color: #e1eaee !important; font-size: 120px !important; }
+h1, h2 { text-align: center; font-size: 28px !important; color: #e1eaee; font-weight: 700; text-transform: uppercase; animation: blur 5s ease-in infinite; text-shadow: 0px 0px 5px rgba(62, 93, 161, 0.774), 0px 0px 7px #162b64; }
 
-h2 { text-align: center; color: #79888f; }
+@keyframes blur { from { text-shadow: 0px 0px 10px #fff, 0px 0px 10px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 50px #fff, 0px 0px 50px #fff, 0px 0px 50px #7B96B8, 0px 0px 150px #7B96B8, 0px 10px 100px #7B96B8, 0px 10px 100px #7B96B8, 0px 10px 100px #7B96B8, 0px 10px 100px #7B96B8, 0px -10px 100px #7B96B8, 0px -10px 100px #7B96B8; } }
 
-a, p { color: #e1eaee !important; gap: 100px; }
+a, p { color: #e1eaee !important; gap: 300px; }
 
-body { background-image: url(/img/fondopagina.gif); background-color: #1d1212; /*En caso de que falle mi bg-image*/ background-position: center; background-repeat: repeat-y; background-size: cover; position: relative; }
+body { background-image: url(/img/fondopagina.gif); background-color: #1d1212; background-position: center; background-repeat: no-repeat; background-size: cover; position: relative; }
 
-.imagenLogo:hover { filter: blur(5px); size: 10%; }
+.imagenLogo:hover { filter: hue-rotate(260deg); transition: filter 3.5s ease; }
 
 td { padding: 15px; }
 
-footer { text-align: center; color: #e1eaee; margin-bottom: 2px; /**background-color: $color-azul;**/ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 12; background-image: linear-gradient(270deg, #020024 10%, #090979 66%); }
+.getLucky { height: 150px; width: 250px; }
+
+footer { text-align: center; color: #e1eaee; margin-bottom: 2px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 12; background-image: linear-gradient(270deg, #020024 10%, #090979 66%); }
+
+/*galeria*/
+.grid-row { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 350px)); grid-gap: 15px 15px; justify-content: center; align-items: baseline; }
+
+.grid-row .grid-item span { padding: 10px; line-height: 1; }
+
+.grid-row .grid-item h3 { font-size: 20px; margin-bottom: 0; }
+
+.grid-row .grid-item:hover { filter: contrast(1.9); transition: filter 3.5s ease; }
+
+.grid-row .grid-item { display: flex; cursor: pointer; background: var(--light); box-shadow: var(--shadow); color: var(--dark); text-align: center; font-family: sans-serif; flex-direction: column-reverse; align-items: stretch; }
+
+.infoBanda { animation: fadeIn; animation-duration: 5s; }
+
+.nosUbicamos { animation: flash; /* referring directly to the animation's @keyframe declaration */ animation-duration: 10s; }
+
+.comentarioSus { animation: pulse; animation-duration: 10s; }
