--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -1,5 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;700;800&family=Nunito+Sans:wght@200;300;400;600;700;900&display=swap");
 @import 'animate.css';
+/*Contactos*/
+#contactanos {
+  display: flex;
+  flex-wrap: border-box;
+}
+
+#contactanos div {
+  flex-grow: 1;
+  flex-basis: 100%;
+}
+
+@media screen and (min-width: 576px) {
+  #contactanos div {
+    flex-basis: 90% !important;
+  }
+}
+@media screen and (min-width: 768px) {
+  #contactanos div {
+    flex-basis: 60% !important;
+    margin: 15px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  #contactanos div {
+    flex-basis: 25% !important;
+  }
+}
+/*Final de contactos*/
 * {
   margin: 0;
   padding: 0;
@@ -13,47 +41,121 @@ nav {
   background-image: linear-gradient(90deg, rgb(2, 0, 36) 10%, rgb(9, 9, 121) 66%);
 }
 
-h1 {
-  color: rgb(225, 234, 238) !important;
-  font-size: 120px !important;
-}
-
+h1,
 h2 {
   text-align: center;
-  color: rgb(121, 136, 143);
+  font-size: 28px !important;
+  color: rgb(225, 234, 238);
+  font-weight: 700;
+  text-transform: uppercase;
+  -webkit-animation: blur 5s ease-in infinite;
+          animation: blur 5s ease-in infinite;
+  text-shadow: 0px 0px 5px rgba(62, 93, 161, 0.774), 0px 0px 7px rgb(22, 43, 100);
 }
 
+@-webkit-keyframes blur {
+  from {
+    text-shadow: 0px 0px 10px #fff, 0px 0px 10px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 50px #fff, 0px 0px 50px #fff, 0px 0px 50px #7B96B8, 0px 0px 150px #7B96B8, 0px 10px 100px #7B96B8, 0px 10px 100px #7B96B8, 0px 10px 100px #7B96B8, 0px 10px 100px #7B96B8, 0px -10px 100px #7B96B8, 0px -10px 100px #7B96B8;
+  }
+}
+
+@keyframes blur {
+  from {
+    text-shadow: 0px 0px 10px #fff, 0px 0px 10px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 25px #fff, 0px 0px 50px #fff, 0px 0px 50px #fff, 0px 0px 50px #7B96B8, 0px 0px 150px #7B96B8, 0px 10px 100px #7B96B8, 0px 10px 100px #7B96B8, 0px 10px 100px #7B96B8, 0px 10px 100px #7B96B8, 0px -10px 100px #7B96B8, 0px -10px 100px #7B96B8;
+  }
+}
 a,
 p {
   color: rgb(225, 234, 238) !important;
-  gap: 100px;
+  gap: 300px;
 }
 
 body {
   background-image: url(/img/fondopagina.gif);
   background-color: #1d1212;
-  /*En caso de que falle mi bg-image*/
   background-position: center;
-  background-repeat: repeat-y;
+  background-repeat: no-repeat;
   background-size: cover;
   position: relative;
 }
 
 .imagenLogo:hover {
-  filter: blur(5px);
-  size: 10%;
+  filter: hue-rotate(260deg);
+  transition: filter 3.5s ease;
 }
 
 td {
   padding: 15px;
 }
 
+.getLucky {
+  height: 150px;
+  width: 250px;
+}
+
 footer {
   text-align: center;
   color: rgb(225, 234, 238);
   margin-bottom: 2px;
-  /**background-color: $color-azul;**/
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12;
   background-image: linear-gradient(270deg, rgb(2, 0, 36) 10%, rgb(9, 9, 121) 66%);
+}
+
+/*galeria*/
+.grid-row {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 350px));
+  grid-gap: 15px 15px;
+  justify-content: center;
+  align-items: baseline;
+}
+
+.grid-row .grid-item span {
+  padding: 10px;
+  line-height: 1;
+}
+
+.grid-row .grid-item h3 {
+  font-size: 20px;
+  margin-bottom: 0;
+}
+
+.grid-row .grid-item:hover {
+  filter: contrast(1.9);
+  transition: filter 3.5s ease;
+}
+
+.grid-row .grid-item {
+  display: flex;
+  cursor: pointer;
+  background: var(--light);
+  box-shadow: var(--shadow);
+  color: var(--dark);
+  text-align: center;
+  font-family: sans-serif;
+  flex-direction: column-reverse;
+  align-items: stretch;
+}
+
+.infoBanda {
+  -webkit-animation: fadeIn;
+          animation: fadeIn;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+}
+
+.nosUbicamos {
+  -webkit-animation: flash;
+          animation: flash;
+  /* referring directly to the animation's @keyframe declaration */
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+}
+
+.comentarioSus {
+  -webkit-animation: pulse;
+          animation: pulse;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
 }/*# sourceMappingURL=estilos.css.map */
