--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;700;800&family=Nunito+Sans:wght@200;300;400;600;700;900&display=swap");
 @import "variables";
 @import 'animate.css';
+@import "responsive";
 
 * {
     margin: 0;
@@ -15,48 +16,134 @@ nav {
     background-image: $fondo-nav;
 }
 
-h1 {
-    color: $color-primario !important;
-    font-size: $tamaño-tituloh1 !important;
-}
 
+
+
+h1,
 h2 {
     text-align: center;
-    color: $color-secundario;
+    font-size: $tamaño-titulo !important;
+    color: $color-primario;
+    font-weight: 700;
+    text-transform: uppercase;
+    animation: blur 5s ease-in infinite;
+    text-shadow: 0px 0px 5px rgba(62, 93, 161, 0.774),
+        0px 0px 7px rgb(22, 43, 100);
+}
+
+@keyframes blur {
+    from {
+        text-shadow: 0px 0px 10px #fff,
+            0px 0px 10px #fff,
+            0px 0px 25px #fff,
+            0px 0px 25px #fff,
+            0px 0px 25px #fff,
+            0px 0px 25px #fff,
+            0px 0px 25px #fff,
+            0px 0px 25px #fff,
+            0px 0px 50px #fff,
+            0px 0px 50px #fff,
+            0px 0px 50px #7B96B8,
+            0px 0px 150px #7B96B8,
+            0px 10px 100px #7B96B8,
+            0px 10px 100px #7B96B8,
+            0px 10px 100px #7B96B8,
+            0px 10px 100px #7B96B8,
+            0px -10px 100px #7B96B8,
+            0px -10px 100px #7B96B8;
+    }
 }
 
 a,
 p {
     color: $color-primario !important;
-    gap: 100px;
+    gap: 300px;
 }
 
 body {
     background-image: url(/img/fondopagina.gif);
     background-color: #1d1212;
-    /*En caso de que falle mi bg-image*/
     background-position: center;
-    background-repeat: repeat-y;
+    background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+
 }
 
 .imagenLogo:hover {
-    filter: blur(5px);
-    size: 10%;
-    
+    filter: hue-rotate(260deg);
+    transition: filter 3.5s ease;
+
 }
 
 td {
     padding: 15px;
 }
 
+.getLucky {
+    height: 150px;
+    width: 250px;
+}
+
 footer {
     text-align: center;
     color: $color-primario;
     margin-bottom: 2px;
-    /**background-color: $color-azul;**/
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12;
     background-image: $fondo-foot;
+}
+
+/*galeria*/
+
+.grid-row {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 350px));
+    grid-gap: 15px 15px;
+    justify-content: center;
+    align-items: baseline;
+}
+
+.grid-row .grid-item span {
+    padding: 10px;
+    line-height: 1;
+}
+
+.grid-row .grid-item h3 {
+    font-size: 20px;
+    margin-bottom: 0;
+}
+
+.grid-row .grid-item:hover {
+
+    filter: contrast(1.9);
+    transition: filter 3.5s ease;
+}
+
+.grid-row .grid-item {
+    display: flex;
+    cursor: pointer;
+    background: var(--light);
+    box-shadow: var(--shadow);
+    color: var(--dark);
+    text-align: center;
+    font-family: sans-serif;
+    flex-direction: column-reverse;
+    align-items: stretch;
+}
+
+.infoBanda {
+    animation: fadeIn;
+    animation-duration: 5s;
+}
+
+.nosUbicamos {
+    animation: flash;
+    /* referring directly to the animation's @keyframe declaration */
+    animation-duration: 10s;
+}
+
+.comentarioSus {
+    animation: pulse;
+    animation-duration: 10s;
 }
